src/org/hackystat/telemetry/language/parser/impl/TelemetryLanguageParserImpl.java
/* Generated By:JavaCC: Do not edit this line. TelemetryLanguageParserImpl.java */
  package org.hackystat.telemetry.language.parser.impl;

  import java.util.ArrayList;
import java.util.List;

import org.hackystat.telemetry.language.ast.ChartReference;
import org.hackystat.telemetry.language.ast.Constant;
import org.hackystat.telemetry.language.ast.DrawCommand;
import org.hackystat.telemetry.language.ast.Expression;
import org.hackystat.telemetry.language.ast.FunctionCall;
import org.hackystat.telemetry.language.ast.NumberConstant;
import org.hackystat.telemetry.language.ast.ReducerCall;
import org.hackystat.telemetry.language.ast.StreamsReference;
import org.hackystat.telemetry.language.ast.StringConstant;
import org.hackystat.telemetry.language.ast.TelemetryChartDefinition;
import org.hackystat.telemetry.language.ast.TelemetryChartYAxisDefinition;
import org.hackystat.telemetry.language.ast.TelemetryReportDefinition;
import org.hackystat.telemetry.language.ast.TelemetryStreamsDefinition;
import org.hackystat.telemetry.language.ast.TextPosition;
import org.hackystat.telemetry.language.ast.Variable;
import org.hackystat.telemetry.language.ast.YAxisReference;

  public class TelemetryLanguageParserImpl implements TelemetryLanguageParserImplConstants {

  final public String identifier() throws ParseException {
                       Token t;
    t = jj_consume_token(IDENTIFIER);
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public String string_constant() throws ParseException {
                            @SuppressWarnings("unused")
                            String str; Token t;
    jj_consume_token(DOUBLEQUOTE);
      token_source.SwitchTo(COMMENT);
    t = jj_consume_token(STRING_INTERNAL);
      token_source.SwitchTo(DEFAULT);
    jj_consume_token(DOUBLEQUOTE);
      {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public Number number_constant() throws ParseException {
                            @SuppressWarnings("unused")
                            Token t; boolean negative = false; Number number;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
    case SUB:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
        break;
      case SUB:
        jj_consume_token(SUB);
                negative = true;
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    number = non_negative_number_constant();
     if (negative) {
       if (number instanceof Integer) {
         {if (true) return new Integer(0 - number.intValue());}
       }
       else {
         {if (true) return new Double(0.0 - number.doubleValue());}
       }
     }
     else {
       {if (true) return number;}
     }
    throw new Error("Missing return statement in function");
  }

  final public Number non_negative_number_constant() throws ParseException {
                                         Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NON_NEG_INTEGER:
      t = jj_consume_token(NON_NEG_INTEGER);
                             {if (true) return new Integer(t.image);}
      break;
    case NON_NEG_DOUBLE:
      t = jj_consume_token(NON_NEG_DOUBLE);
                             {if (true) return new Double(t.image);}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//==========================================================================
//
//                           Main Grammar
//
//==========================================================================
  final public List all_input() throws ParseException {
                     List list;
    list = statements();
    jj_consume_token(0);
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  @SuppressWarnings("unchecked")
  final public List statements() throws ParseException {
  List list = new ArrayList(2);
  TelemetryStreamsDefinition streamsDef;
  TelemetryChartDefinition chartDef;
  TelemetryReportDefinition reportDef;
  TelemetryChartYAxisDefinition chartYAxisDef;
  DrawCommand drawCommand;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STREAMS:
        streamsDef = streams_statement();
                                                   list.add(streamsDef);
        break;
      case CHART:
        chartDef = chart_statement();
                                                   list.add(chartDef);
        break;
      case REPORT:
        reportDef = report_statement();
                                                   list.add(reportDef);
        break;
      case YAXIS:
        chartYAxisDef = chart_y_axis_statement();
                                                   list.add(chartYAxisDef);
        break;
      case DRAW:
        drawCommand = draw_command();
                                                   list.add(drawCommand);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STREAMS:
      case CHART:
      case REPORT:
      case DRAW:
      case YAXIS:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
    }
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public TelemetryStreamsDefinition streams_statement_input() throws ParseException {
                                                        TelemetryStreamsDefinition def;
    def = streams_statement();
    jj_consume_token(0);
    {if (true) return def;}
    throw new Error("Missing return statement in function");
  }

  final public TelemetryChartDefinition chart_statement_input() throws ParseException {
                                                    TelemetryChartDefinition def;
    def = chart_statement();
    jj_consume_token(0);
    {if (true) return def;}
    throw new Error("Missing return statement in function");
  }

  final public TelemetryChartYAxisDefinition chart_y_axis_statement_input() throws ParseException {
                                                                TelemetryChartYAxisDefinition def;
    def = chart_y_axis_statement();
    jj_consume_token(0);
    {if (true) return def;}
    throw new Error("Missing return statement in function");
  }

  final public TelemetryReportDefinition report_statement_input() throws ParseException {
                                                      TelemetryReportDefinition def;
    def = report_statement();
    jj_consume_token(0);
    {if (true) return def;}
    throw new Error("Missing return statement in function");
  }

//==========================================================================
//
//                       TelemetryStreamsDefinition
//
//==========================================================================
  final public TelemetryStreamsDefinition streams_statement() throws ParseException {
  String id;
  String description;
  Expression expression;
  Variable[] vars;
  Token startToken, endToken;
    startToken = jj_consume_token(STREAMS);
    id = identifier();
    jj_consume_token(LPARA);
    vars = variables();
    jj_consume_token(RPARA);
    jj_consume_token(25);
    jj_consume_token(26);
    description = streams_description();
    jj_consume_token(COMMA);
    expression = streams_definition();
    jj_consume_token(27);
    endToken = jj_consume_token(SEMICOLON);
    try {
      TextPosition position = new TextPosition(startToken.beginLine, startToken.beginColumn, endToken.endLine, endToken.endColumn);
      TelemetryStreamsDefinition streamsDef = new TelemetryStreamsDefinition(id, expression, vars, position);
      streamsDef.setDescription(description);
      {if (true) return streamsDef;}
    }
    catch (Exception ex) {
      {if (true) throw new ParseException(ex.getMessage());}
    }
    throw new Error("Missing return statement in function");
  }

  final public String streams_description() throws ParseException {
                                 String description;
    description = string_constant();
    {if (true) return description;}
    throw new Error("Missing return statement in function");
  }

  final public Expression streams_definition() throws ParseException {
                                   Expression exp;
    exp = expression();
    {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

//==========================================================================
//
//                        TelemetryChartYAxis
//
//==========================================================================
//y-axis fileAxis() = {"Size (LOC)", "integer|double", 0, 1000} 
  final public TelemetryChartYAxisDefinition chart_y_axis_statement() throws ParseException {
  String id; Variable[] vars; Expression labelParameter; String strLabel;
  String numberType = TelemetryChartYAxisDefinition.NUMBER_TYPE_AUTO;
  Number lowerBound = null; Number upperBound = null;
  Token startToken, endToken;
    startToken = jj_consume_token(YAXIS);
    id = identifier();
    jj_consume_token(LPARA);
    vars = variables();
    jj_consume_token(RPARA);
    jj_consume_token(25);
    jj_consume_token(26);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOUBLEQUOTE:
      strLabel = string_constant();
                                         labelParameter = new StringConstant(strLabel);
      break;
    case IDENTIFIER:
      strLabel = identifier();
                                         labelParameter = new Variable(strLabel);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      numberType = string_constant();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        lowerBound = number_constant();
        jj_consume_token(COMMA);
        upperBound = number_constant();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(27);
    endToken = jj_consume_token(SEMICOLON);
    try {
      TextPosition position = new TextPosition(startToken.beginLine, startToken.beginColumn, endToken.endLine, endToken.endColumn);
      {if (true) return new TelemetryChartYAxisDefinition(id, vars, labelParameter, numberType, lowerBound, upperBound, position);}
    }
    catch (Exception ex) {
      {if (true) throw new ParseException(ex.getMessage());}
    }
    throw new Error("Missing return statement in function");
  }

//==========================================================================
//
//                        TelemetryChartDefinition
//
//==========================================================================
  final public TelemetryChartDefinition chart_statement() throws ParseException {
  String id;
  String title;
  Variable[] vars;
  List subCharts;
  Token startToken, endToken;
    startToken = jj_consume_token(CHART);
    id = identifier();
    jj_consume_token(LPARA);
    vars = variables();
    jj_consume_token(RPARA);
    jj_consume_token(25);
    jj_consume_token(26);
    title = chart_title();
    jj_consume_token(COMMA);
    subCharts = sub_charts();
    jj_consume_token(27);
    endToken = jj_consume_token(SEMICOLON);
    try {
      TextPosition position = new TextPosition(startToken.beginLine, startToken.beginColumn, endToken.endLine, endToken.endColumn);
      {if (true) return new TelemetryChartDefinition(id, title, vars, subCharts, position);}
    }
    catch(Exception ex) {
      {if (true) throw new ParseException(ex.getMessage());}
    }
    throw new Error("Missing return statement in function");
  }

  final public String chart_title() throws ParseException {
                         String title;
    title = string_constant();
    {if (true) return title;}
    throw new Error("Missing return statement in function");
  }

//List<TelemetryChartDefinition.SubChartDefinition>
  @SuppressWarnings("unchecked")
  final public List sub_charts() throws ParseException {
                     List list = new ArrayList(); TelemetryChartDefinition.SubChartDefinition subChartDef;
    subChartDef = sub_chart_definition();
                                                     list.add(subChartDef);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      subChartDef = sub_chart_definition();
                                                     list.add(subChartDef);
    }
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public TelemetryChartDefinition.SubChartDefinition sub_chart_definition() throws ParseException {
                                                                      StreamsReference streamsRef; YAxisReference yAxisRef;
    jj_consume_token(LPARA);
    streamsRef = streams_reference();
    jj_consume_token(COMMA);
    yAxisRef = y_axis_reference();
    jj_consume_token(RPARA);
    {if (true) return new TelemetryChartDefinition.SubChartDefinition(streamsRef, yAxisRef);}
    throw new Error("Missing return statement in function");
  }

  final public StreamsReference streams_reference() throws ParseException {
                                        String id; Expression[] params;
    id = identifier();
    jj_consume_token(LPARA);
    params = variables_and_constants();
    jj_consume_token(RPARA);
    {if (true) return new StreamsReference(id, params);}
    throw new Error("Missing return statement in function");
  }

  final public YAxisReference y_axis_reference() throws ParseException {
                                     String id; Expression[] params;
    id = identifier();
    jj_consume_token(LPARA);
    params = variables_and_constants();
    jj_consume_token(RPARA);
    {if (true) return new YAxisReference(id, params);}
    throw new Error("Missing return statement in function");
  }

//==========================================================================
//
//                        TelemetryReportDefinition
//
//==========================================================================
  final public TelemetryReportDefinition report_statement() throws ParseException {
  String id;
  String title;
  Variable[] vars;
  List reportDefinition;
  Token startToken, endToken;
    startToken = jj_consume_token(REPORT);
    id = identifier();
    jj_consume_token(LPARA);
    vars = variables();
    jj_consume_token(RPARA);
    jj_consume_token(25);
    jj_consume_token(26);
    title = report_title();
    jj_consume_token(COMMA);
    reportDefinition = report_definition();
    jj_consume_token(27);
    endToken = jj_consume_token(SEMICOLON);
    try {
      TextPosition position = new TextPosition(startToken.beginLine, startToken.beginColumn, endToken.endLine, endToken.endColumn);
      {if (true) return new TelemetryReportDefinition(id, title, vars, reportDefinition, position);}
    }
    catch(Exception ex) {
      {if (true) throw new ParseException(ex.getMessage());}
    }
    throw new Error("Missing return statement in function");
  }

  final public String report_title() throws ParseException {
                         String title;
    title = string_constant();
    {if (true) return title;}
    throw new Error("Missing return statement in function");
  }

  @SuppressWarnings("unchecked")
  final public List report_definition() throws ParseException {
                            List list = new ArrayList(); ChartReference ref;
    ref = chart_reference();
                            list.add(ref);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      ref = chart_reference();
      list.add(ref);
    }
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public ChartReference chart_reference() throws ParseException {
                                    @SuppressWarnings("unused")
                                    ChartReference ref; String id; Expression[] params;
    id = identifier();
    jj_consume_token(LPARA);
    params = variables_and_constants();
    jj_consume_token(RPARA);
    {if (true) return new ChartReference(id, params);}
    throw new Error("Missing return statement in function");
  }

//==============================================================================
//
//                            DrawCommand
//
//==============================================================================
  final public DrawCommand draw_command() throws ParseException {
  String id; Constant[] params; Token startToken, endToken;
    startToken = jj_consume_token(DRAW);
    id = identifier();
    jj_consume_token(LPARA);
    params = constants();
    jj_consume_token(RPARA);
    endToken = jj_consume_token(SEMICOLON);
    TextPosition position = new TextPosition(startToken.beginLine, startToken.beginColumn, endToken.endLine, endToken.endColumn);
    {if (true) return new DrawCommand(id, params, position);}
    throw new Error("Missing return statement in function");
  }

//==========================================================================
//
//           Expression
//
//==========================================================================
  final public Expression expression() throws ParseException {
                            Expression exp;
    exp = additive_expression();
    {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Expression additive_expression() throws ParseException {
                                     Expression exp1, exp2;
    exp1 = multiplicative_expression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
      case SUB:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
        exp2 = multiplicative_expression();
      exp1 = new FunctionCall("Add", new Expression[]{exp1, exp2});
        break;
      case SUB:
        jj_consume_token(SUB);
        exp2 = multiplicative_expression();
      exp1 = new FunctionCall("Sub", new Expression[]{exp1, exp2});
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression multiplicative_expression() throws ParseException {
                                           Expression exp1, exp2;
    exp1 = unary_expression();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
      case DIV:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
        jj_consume_token(MUL);
        exp2 = unary_expression();
      exp1 = new FunctionCall("Mul", new Expression[]{exp1, exp2});
        break;
      case DIV:
        jj_consume_token(DIV);
        exp2 = unary_expression();
      exp1 = new FunctionCall("Div", new Expression[]{exp1, exp2});
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression unary_expression() throws ParseException {
                                 Number number; Expression exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NON_NEG_INTEGER:
    case NON_NEG_DOUBLE:
      number = non_negative_number_constant();
                                                  {if (true) return new NumberConstant(number);}
      break;
    case LPARA:
      jj_consume_token(LPARA);
      exp = expression();
      jj_consume_token(RPARA);
                                                  {if (true) return exp;}
      break;
    case IDENTIFIER:
      exp = call();
                                                  {if (true) return exp;}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression call() throws ParseException {
                     String name; Expression[] params;
    name = identifier();
    jj_consume_token(LPARA);
    params = parameters();
    jj_consume_token(RPARA);
    //Requirement: ReducerCall cannot have FunctionCall as its parameter
    //             FunctionCall must have at least one parameter of type ReducerCall or FunctionCall  
    //We return either ReducerCall or FunctionCall object here.

    boolean isReducerCall = true;
    for (int i = 0; i < params.length; i++) {
      Expression param = params[i];
      if (param instanceof ReducerCall || param instanceof FunctionCall) {
        isReducerCall = false;
        break;
      }
    }

    if (isReducerCall) {
      {if (true) return new ReducerCall(name, params);}
    }
    else {
      {if (true) return new FunctionCall(name, params);}
    }
    throw new Error("Missing return statement in function");
  }

  @SuppressWarnings("unchecked")
  final public Expression[] parameters() throws ParseException {
                              ArrayList list = new ArrayList(); Expression exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
    case SUB:
    case LPARA:
    case DOUBLEQUOTE:
    case NON_NEG_INTEGER:
    case NON_NEG_DOUBLE:
    case IDENTIFIER:
      exp = parameter();
                                    list.add(exp);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
